<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cepEditText"
        android:layout_width="390dp"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:inputType="number"
        android:digits="0123456789"
        android:hint="@string/textedit_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_label"
        android:onClick="consultarCep"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cepEditText"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/cepTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cep_label"/>

            <TextView
                android:id="@+id/logradouroTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logradouro_label"/>

            <TextView
                android:id="@+id/bairroTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bairro_label"/>

            <TextView
                android:id="@+id/localidadeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localidade_label"/>

            <TextView
                android:id="@+id/ufTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uf_label"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
